--- a/src/components/track/track_style.css
+++ b/src/components/track/track_style.css
@@ -9,12 +9,13 @@
     grid-template: repeat(2, 1fr) / repeat(7, 1fr);
     width: 300px;
     height: 80px;
+    margin: 5px 0;
     border: 2px solid #33658A;
     background-color: #2F4858;
     color: #fff;
 }
 
-button {
+#track button {
     position: relative;
     right: 5px;
     grid-row: 1 / 3;
@@ -28,16 +29,17 @@ button {
     
 }
 
-button img {
+#track button img {
     object-fit: contain;
     background-color: #212a3e;
     transition-duration: 0.2s;
 }
 
-h3 {
+#track h3 {
     grid-row: 1 / 2;
     grid-column: 2 / 7;
     padding-left: 6px;
+    padding-top: 5px;
 }
 
 #artist {
@@ -65,7 +67,7 @@ h3 {
     /* object-fit: contain; */
 }
 
-img {
+#track img {
     width: 100%;
     height: 100%;
 }
