--- a/src/components/trackList/trackList_style.css
+++ b/src/components/trackList/trackList_style.css
@@ -5,17 +5,34 @@
 }
 
 #results {
-    border: 2px solid lightblue;
-    width: fit-content;
+    width: 350px;
+    height: 500px;
+    margin: 0 10px;
     padding: 15px 10px;
-    background-color: #394867;
+    background-color: #000;
     max-height: 500px;
+    border: 2px solid #6e6d6d;
+    border-radius: 10px;
     overflow-y: hidden;
 }
 
 #results:hover {
     overflow-y: auto;
 }
+
+::-webkit-scrollbar{
+    width: 6px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #595959;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888; /* Set the background color of the handle */
+    border-radius: 5px; /* Round the edges of the handle */
+  }
 
 h2 {
     color: #fff;
