--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,24 @@
 }
 
 .App {
-  /* display: flex; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #000;
   height: 100vh;
 }
 
-.searchBar {
-  display: block;
-  border: 1px solid red;
-  background-color: red;
+.search-result {
 }
 
-.trackList {
-  position: absolute;
-  top: 50px;
+#search {
+
+}
+
+#result {
+
+}
+
+#playList {
+  
 }
