--- a/src/components/track/track_style.css
+++ b/src/components/track/track_style.css
@@ -10,14 +10,14 @@
     width: 300px;
     height: 80px;
     margin: 5px 0;
-    border: 2px solid #33658A;
-    background-color: #2F4858;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #2b2b2b;
+    background-color: #000;
     color: #fff;
 }
 
 #track button {
     position: relative;
-    right: 5px;
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     border-radius: 0;
@@ -31,7 +31,7 @@
 
 #track button img {
     object-fit: contain;
-    background-color: #212a3e;
+    background-color: #000;
     transition-duration: 0.2s;
 }
 
@@ -64,10 +64,8 @@
     grid-row: 1 / 3;
     grid-column: 6 / 8;
     padding: 3px 4px;
+    width: 100%;
+    height: 100%;
     /* object-fit: contain; */
 }
 
-#track img {
-    width: 100%;
-    height: 100%;
-}
